--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -61,6 +61,7 @@
             android:text="Title of the song"
             android:singleLine="true"
             android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:padding="0dp"
@@ -115,7 +116,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/seek_bar"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:layout_marginTop="8dp">
 
             <ImageView
                 android:layout_width="wrap_content"
