--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -45,6 +45,60 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recycler_view"
-        android:layout_below="@id/header"/>
+        android:layout_below="@id/header"
+        android:layout_above="@id/control_panel"/>
+
+    <LinearLayout
+        android:id="@+id/control_panel"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
+        android:padding="12dp"
+        android:background="@drawable/control_panel_background" >
+
+        <TextView
+            android:id="@+id/songTitle"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:text="No song playing..."
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:layout_marginEnd="16dp"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:gravity="center"
+            android:textAlignment="textStart"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/previous"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/skip_previous_48" />
+
+            <ImageView
+                android:id="@+id/pause_play"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/play_48" />
+
+            <ImageView
+                android:id="@+id/next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/skip_next_48" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </RelativeLayout>
